# termlib

./: build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: ci.yml
docs/: ACCESSIBILITY.md
gradle/: libs.versions.toml
lib/: api.txt  build.gradle.kts
lib/src/androidTest/java/org/connectbot/terminal/: AccessibilityOverlayTest.kt  OscSequenceTest.kt  ReviewModeTest.kt  ShellIntegrationTest.kt
lib/src/main/cpp/: CMakeLists.txt  Terminal.cpp  Terminal.h  mutf8.cpp  mutf8.h
lib/src/main/java/org/connectbot/terminal/: AccessibilityOverlay.kt  ImeInputView.kt  KeyboardHandler.kt  LiveOutputRegion.kt  ModifierManager.kt  OscParser.kt  SemanticType.kt  Terminal.kt  TerminalCallbacks.kt  TerminalEmulator.kt  TerminalLine.kt  TerminalNative.kt
lib/src/test/java/org/connectbot/terminal/: GranularNavigationTest.kt  OscParserTest.kt  SemanticTypeTest.kt
